# rust_e_commerce

./: .gitignore  Cargo.toml  README.md
migrations/: 20260307144728_users_table.sql  20260307144744_wallets_table.sql  20260307144754_products_table.sql  20260307144804_orders_table.sql  20260307144811_orders_items_table.sql  20260307144828_transactions_table.sql  20260308152503_initial_table.sql
src/: error.rs  main.rs
src/handler/: user.rs
src/models/: mod.rs  order.rs  order_item.rs  product.rs  transaction.rs  user.rs  wallet.rs
src/routes/: endpoints.rs  logs_route.rs  mod.rs  product.rs  user.rs  wallet.rs
src/utils/: jwt.rs  mod.rs  password.rs  password_hasher.rs
