[package]
name = "rust_e_commerce"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = "10.3.0"
rand = "0.10.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["serde"] }
