[package]
name = "rust_e_commerce"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jsonwebtoken = "10.3.0"
rand = "0.10.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "uuid", "postgres", "macros", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = {version = "0.6.8",features=["trace","normalize-path"]}
tracing = "0.1.44"
tracing-subscriber = {version ="0.3.22",features=["env-filter"]}
uuid = { version = "1.22.0", features = ["serde"] }
validator = {version = "0.20.0" , features = ["derive"]}
